--- a/vanilla/guess-the-word/src/styles/progress.css
+++ b/vanilla/guess-the-word/src/styles/progress.css
@@ -9,7 +9,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  gap: 0.5rem;
 
   padding: 0.25rem;
   text-shadow: 0px 0px 4px #000;
@@ -19,7 +18,16 @@
   --spinner-color: var(--progress-bg);
 }
 .progress__title {
-  text-align: right;
+  margin-left: auto;
+  padding-inline: 0.25rem;
+  background-color: var(--progress-description-bg);
+  border-radius: 6px 0 0 6px;
+}
+.progress__count {
+  margin-right: auto;
+  padding-inline: 0.25rem;
+  background-color: var(--progress-description-bg);
+  border-radius: 0 6px 6px 0;
 }
 .progress__track {
   position: absolute;
